kubernetes/apps/main/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - vault.lilstrudel.io
      secretName: vaultwarden-tls
  rules:
    - host: vault.lilstrudel.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
